# End-to-end-ML-project-churn-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py  mlflow.db  pyproject.toml
.github/workflows/: deploy.yml  main.yml
config/: config.yaml  config.yaml.example  params.yaml  schema.yaml
docs/: ML_Lifecycle_Design.md  deployment.md  grafana_dashboard.md  project_structure.md  setup.md  setup_issues.md
docs/assets/: deployment.md
frontend/: Dockerfile  streamlit_app.py
monitoring/data_drift/: monitoring_flow.py  monitoring_tasks.py  retraining_trigger.py
monitoring/grafana/: dashboard.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
research/: 01_Experiment.ipynb  01_data_ingestion.ipynb  02_Experiment.ipynb  02_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  03_data_validation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  07_model_pusher.ipynb  Experiment.ipynb
src/churn_project/: __init__.py  exception.py  logger.py  utils.py
src/churn_project/api/: Dockerfile  app.py  schemas.py
src/churn_project/aws/: monitoring_logging.py  s3_utils.py
src/churn_project/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/churn_project/config/: configuration.py
src/churn_project/constants/: __init__.py
src/churn_project/entity/: artifact_entity.py  config_entity.py
src/churn_project/inference/: prediction_service.py
src/churn_project/orchestrator/: training_flow.py
src/churn_project/pipeline/: training_pipeline.py
src/churn_project/predictor/: predict.py
tests/: conftest.py  test_utils.py
tests/inference/: test_inference_loading.py
tests/integration/inference/: test_inference_loading.py
tests/predictor/: test_predictor_loading.py  test_predictor_prediction.py  test_predictor_validation.py
tests/unit/: test_utils.py
tests/unit/components/: test_data_ingestion.py  test_data_validation.py  test_feature_engineer.py
