[project]
name = "churn-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Vital",email = "pedrosalazarvital@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymysql (>=1.1.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "imblearn (>=0.0,<0.1)",
]

[tool.poetry]
packages = [{include = "churn_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
]
