[project]
name = "churn-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Lucas Salazar Vital",email = "pedrosalazarvital@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.1.0,<4.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "evidently (>=0.7.15,<0.8.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "prefect (>=3.6.3,<4.0.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
]

[tool.poetry]
packages = [{include = "churn_project", from = "src"}]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
warn_unused_configs = true
strict = false

[[tool.mypy.overrides]]
# Ignore missing type stubs for the following modules
module = ["joblib.*", "box.*", "ensure.*", "yaml.*", "pymysql.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
]
